actualizo tp grupal y tp individual del sprint 1